# TASK_comO

./: CMakeLists.txt  ComO_01.cpp  ComO_02.cpp  ComO_02Test.cpp  ComO_03.cpp  ComO_04.cpp  ComO_04.txt  ComO_05.cpp  ComO_06.cpp  ComO_07.cpp  ComO_08.cpp  ComO_09.cpp  ComO_10.cpp  ComO_11.cpp  ComO_12.cpp  ComO_12.txt  ComO_12_Brute.cpp  ComO_13.cpp  ComO_14.cpp  ComO_15.cpp  ComO_16 .cpp  ComO_16.cpp  ComO_19.cpp  ComO_20.cpp  ComO_21.cpp  ComO_22.cpp  ComO_23.cpp  ComO_26.cpp  ComO_27.cpp  ComO_27TD.cpp  ComO_28.cpp  ComO_29.cpp  ComO_30.cpp  ComO_31.cpp  ComO_33.cpp  ComO_34.cpp
