cmake_minimum_required(VERSION 3.15)
project(TASK_comO)

set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libstdc++ -static-libgcc")
set(CMAKE_EXE_LINKER_FLAGS "-static")
set(CMAKE_CXX_STANDARD 14)

add_executable(ComO_01 ComO_01.cpp)
add_executable(ComO_02 ComO_02.cpp)
add_executable(ComO_03 ComO_03.cpp)
add_executable(ComO_04 ComO_04.cpp)
add_executable(ComO_05 ComO_05.cpp)
add_executable(ComO_06 ComO_06.cpp)
add_executable(ComO_07 ComO_07.cpp)
add_executable(ComO_08 ComO_08.cpp)
add_executable(ComO_09 ComO_09.cpp)
add_executable(ComO_10 ComO_10.cpp)
add_executable(ComO_11 ComO_11.cpp)
add_executable(ComO_12 ComO_12.cpp)
add_executable(ComO_13 ComO_13.cpp)
add_executable(ComO_15 ComO_15.cpp)
add_executable(ComO_16 ComO_16.cpp)
add_executable(ComO_19 ComO_19.cpp)
add_executable(ComO_20 ComO_20.cpp)
add_executable(ComO_21 ComO_21.cpp)
add_executable(ComO_22 ComO_22.cpp)
add_executable(ComO_23 ComO_23.cpp)
add_executable(ComO_31 ComO_31.cpp)
add_executable(ComO_27 ComO_27.cpp)
add_executable(ComO_26 ComO_26.cpp)
add_executable(ComO_28 ComO_28.cpp)
add_executable(ComO_29 ComO_29.cpp)
add_executable(ComO_34 ComO_34.cpp)
add_executable(ComO_14 ComO_14.cpp)
add_executable(ComO_12_Brute ComO_12_Brute.cpp)

add_executable(ComO_27TD ComO_27TD.cpp)
add_executable(ComO_30 ComO_30.cpp)
add_executable(ComO_33 ComO_33.cpp)